imp adds in prev notes

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -46,7 +46,13 @@ Client-side rendering is now more common due to better scalability.
 
 ### Virtual Environment:
 
-**[NOTE: Found better (and more standard) [steps](https://fastapi.tiangolo.com/virtual-environments) for setting up and using venv while reading FastAPI docs.]**
+> NOTE: Realizing later that we've many options for using virtual environments in python:
+>
+> - `venv` (standard built-in python, no auto dependency management)
+> - `pipenv` (3rd party, auto dependency management)
+> - `poetry` (3rd party, auto dependency management, most popular now)
+>
+> \- [Gemini](https://g.co/gemini/share/12a0e9469c7a), [ChatGPT](https://chatgpt.com/share/68b6e78e-2e40-800a-8435-fb115d37ce13)
 
 Install pipenv:
 
