--- a/Notes/Part 3/3. Running Background Tasks.md
+++ b/Notes/Part 3/3. Running Background Tasks.md
@@ -98,9 +98,17 @@ Docs: [Redis](https://docs.celeryq.dev/en/stable/getting-started/first-steps-wit
 
   `docker ps` shows running containers, with ID, status, and mapped ports.
 
+  - To stop:
+
+    ```sh
+    docker stop <CONTAINER ID>
+    ```
+
+    (Quick tip: No need to give the whole ID, just type initial chars such that the prefix is unique.)
+
 - **In Django project**:
 
-  Install Redis client dependency:
+  Install Redis Python client ([redis-py](https://github.com/redis/redis-py)):
 
   ```sh
   pipenv install redis
