--- a/Notes/Part 3/5. Performance Testing.md
+++ b/Notes/Part 3/5. Performance Testing.md
@@ -41,6 +41,8 @@ Docs: [Writing a locustfile](https://docs.locust.io/en/stable/writing-a-locustfi
 - Locust creates an instance of this class per simulated user.
 - Define **tasks** as methods decorated with `@task`.
 
+Structuring: (Read TLDR) [Gemini](https://g.co/gemini/share/b15fd1963cdb), [ChatGPT](https://chatgpt.com/share/68b6f7a2-c83c-800a-bcfc-ee00367cac26)
+
 ### Example Tasks
 
 1. **Browse products**
@@ -60,6 +62,8 @@ Docs: [Writing a locustfile](https://docs.locust.io/en/stable/writing-a-locustfi
    - Requires a **cart ID**, created at user start (using `on_start()`, see `Lifecycle Hook` below).
    - POST to `/store/carts/<id>/items/`
    - JSON payload: `{"product": <id>, "quantity": 1}`
+
+- Important: **Always end URLs with a trailing slash (`/`)**, sometimes Django redirects and skews performance results.
 
 ### Lifecycle Hook
 
@@ -95,6 +99,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 
   - Make sure target website is live.
   - In new terminal: `locust -f <file_name>.py`.
+  - On any code changes, re-run locust.
   - Locust UI runs at [localhost:8089](http://localhost:8089).
 
 - **Web UI: Input parameters:**
