fixes/improvements in prev code and notes

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -160,7 +160,9 @@ Read docs.
 
 ## Using Templates
 
-We can replace Django's default template engine with a preferred template engine if we want.
+- Always namespace template files. Read TLDR in: [Gemini](https://g.co/gemini/share/73e20a46eaea).
+
+- We can replace Django's default template engine with a preferred template engine if we want.
 
 ### Important
 
