--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -312,6 +312,11 @@ On upload, browser sends **two requests**:
 
    - `"all"` means CSS applies everywhere (`screen` + `print`).
 
-   **FAQ:** Why do we need another "store" dir when we're already in the "store" app?
-
-   - Because, we've option to define one app's static file in another app.
+> **FAQ:** Why do we need another "store" dir when we're already in the "store" app?
+>
+> - The `manage.py collectstatic` command copies all static files from all your apps into a single folder for deployment (`STATIC_ROOT`).
+> - Without namespacing, files with the same name (e.g., `styles.css`) from different apps will overwrite each other during this process.
+> - Creating an extra subdirectory with the app's name (e.g., `static/store/`) solves this by ensuring every file has a unique path.
+> - You use the `{% static 'store/styles.css' %}` tag in your templates to correctly load the namespaced files.
+>
+> \- [Gemini](https://g.co/gemini/share/73e20a46eaea)
