--- a/Notes/Part 3/2. Sending Emails.md
+++ b/Notes/Part 3/2. Sending Emails.md
@@ -38,7 +38,7 @@ How to see what's using a port number:
 lsof -i :5000
 ```
 
-**Solution:** Just use a different port number.
+**SOLUTION: Just use a different port number.**
 
 ## Configuring the Email Backend
 
