part 3.7: preparing for production

--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -234,7 +234,7 @@ And we've not allowed any domain to access our resources.
 
 2. Add `"corsheaders"` to `INSTALLED_APPS`.
 
-3. Add middleware: `"corsheaders.middleware.CorsMiddleware"` **at the top** of `MIDDLEWARE`.
+3. Add middleware: `"corsheaders.middleware.CorsMiddleware"` **at the top**. (See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
 
 4. [Configure allowed origins](https://github.com/adamchainz/django-cors-headers?tab=readme-ov-file#configuration):
 
