--- a/Notes/Part 3/4. Automated Testing.md
+++ b/Notes/Part 3/4. Automated Testing.md
@@ -167,9 +167,26 @@ Create config file `pytest.ini` in project root:
 ```ini
 [pytest]
 DJANGO_SETTINGS_MODULE = storefront.settings
+testpaths = store/tests/ any/other/dir/ or/file.py
 ```
 
 Run `pytest` → executes tests.
+
+> [Researched by me] [Ref: [Gemini](https://g.co/gemini/share/acedbef3900f)]
+>
+> **WARNING:**
+>
+> When we run the `pytest` command, it scans the _entire project folder_ (all the sibling folders of `pytest.ini` file) recursively, looking for any files that match its [test discovery patterns](https://docs.pytest.org/en/latest/explanation/goodpractices.html#conventions-for-python-test-discovery) _(`test\__.py`&`_\_test.py`_).
+>
+> **Result:**
+>
+> This resulted in me debugging for an hour because **tests started failing** after `Part 3 > Caching` section, as I added a `test_cache.py` file in `locustfiles/` folder.  
+> Once pytest finds a file it thinks contains tests, it imports that file to load the tests into memory. It does this before it starts running any of our actual tests.  
+> **What exactly caused the test fail?** - When it imported `from locust import ...`, the Locust library automatically ran a process called "monkey-patching," which broke a standard Python module (`select`) that our database needs to connect. (To achieve high concurrency, `gevent` uses a technique called **monkey-patching**, where it replaces parts of Python's standard library (like the `select` module) with its own versions.)
+>
+> **Solution:**
+>
+> **ALWAYS USE `testpaths`** option in `pytest.ini` file. `pytest` would look up for tests in only these paths.
 
 - **Validating tests (avoid "lying tests"):**
 
