--- a/Notes/Part 3/5. Performance Testing.md
+++ b/Notes/Part 3/5. Performance Testing.md
@@ -205,13 +205,10 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 - **Installation & Setup:**
 
   Note: Silk should never be used in production — it adds _significant_ overhead.  
-  So add middleware, installed app, and url pattern under **`if DEBUG`**.
+  So add middleware, installed app, and url pattern under **`if DEBUG`** / `settings/dev.py`.
 
   1. `pipenv install --dev django-silk`
-  2. Add middleware (`'silk.middleware.SilkyMiddleware'`) → placement matters.
-     - Middleware processes requests in sequence.
-     - If earlier middleware ends request, Silk won’t see it.
-     - So best to put Silk **first**.
+  2. Add middleware (`'silk.middleware.SilkyMiddleware'`) (See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
   3. Add `'silk'` to `INSTALLED_APPS`.
   4. Add URLs: `path('silk/', include('silk.urls', namespace='silk'))`
   5. `python manage.py migrate`
