--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -182,4 +182,6 @@ Install with:
 pipenv install django-debug-toolbar
 ```
 
-While adding to installed apps and middleware, use `if DEBUG`.
+While adding to installed apps and middleware, use `if DEBUG` / `settings/dev.py`.
+
+See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares)
