--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -20,6 +20,8 @@ Overview / At a glance: [docs.djangoproject.com/en/5.2/intro/overview](https://d
 
 ## How the Web Works
 
+> Explains frontend vs backend, HTTP requests/responses, server-rendered vs client-rendered pages, APIs, and positions Django as a backend framework for building APIs.
+
 Web applications have a frontend (client-side, what you see) and a backend (server-side, data processing). Communication happens via HTTP requests and responses.
 
 ### Rendering Web Pages:
@@ -37,12 +39,16 @@ Client-side rendering is now more common due to better scalability.
 
 ## Setting Up the Development Environment
 
+> Covers setting up environment: upgrade to latest Python, use `pip`/`pip3` with Pipenv for dependency management, and install VS Code with Python extension for coding.
+
 - Python
 
 - VS Code
   - [Python](https://marketplace.visualstudio.com/items?itemName=ms-python.python) Extension
 
 ## Creating Your First Django Project
+
+> Shows creating the first Django project with Pipenv (virtual environment, Pipfile), using `django-admin startproject`, understanding core files, switching to `manage.py`, and running the dev server.
 
 ### Virtual Environment:
 
@@ -112,6 +118,8 @@ python manage.py runserver 9000
 
 ## Using the Integrated Terminal in VSCode
 
+> Shows how to configure VS Code to use the virtual environment’s Python interpreter, and set up the integrated terminal.
+
 1. Open the project dir in VS.
 
 2. Set the python interpreter path.
@@ -124,21 +132,26 @@ python manage.py runserver 9000
 
 3. Now, whenever you'd open terminal in this VS code project, venv would automatically be activated by VS.
 
-   Again, remember project dir name should be added as prefix.
+   (Again, remember project dir name would be added as prefix.)
 
 ### Troubleshooting
+
+> Happened with me.
 
 If venv is not being activated automatically by VS, it could be because of [Python Environments](https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-python-envs) extension, **uninstall it**.
 
 ## Creating Your First App
 
-See `INSTALLED_APPS` in `settings.py`.
+> Explains Django apps, reviews default installed apps, shows how to create a new app (`playground`) with its standard structure, and register it in `INSTALLED_APPS`.
 
+- See `INSTALLED_APPS` in `settings.py`.
 - `apps.py` – Should've been named `app_config.py` instead, since it contains the app's configuration.
 - `views.py` – Again, the name is misleading. It's actually a request handler. "Views" usually refer to templates or HTML in web development.
   "Views" in other frameworks = "Templates" in Django.
 
 ## Writing Views
+
+> Introduces Django views as request handlers, and shows creating a simple view function (`say_hello`) returning an `HttpResponse`.
 
 Views or view functions take a request and return a response. So, it's a **request handler** actually.
 
@@ -156,9 +169,13 @@ from django.http import HttpResponse
 
 ## Mapping URLs to Views
 
+> Explains mapping URLs to view functions by creating an app-level `urls.py`, using `path()` and `include()` to connect it with the project’s main `urls.py`, and routing `/playground/hello/` to return "Hello World".
+
 Read docs.
 
 ## Using Templates
+
+> Demonstrates using Django templates: creating `hello.html`, rendering it via `render(request, template, context)` to return dynamic HTML with variables and simple logic (`if`), while noting templates are rarely used in modern API-focused Django projects.
 
 - Always namespace template files. Read TLDR in: [Gemini](https://g.co/gemini/share/73e20a46eaea).
 
@@ -170,18 +187,49 @@ Read docs.
 
 ## Debugging Django Applications in VSCode
 
-Similar to normal Python debugger.
+> Shows how to debug Django apps in VS Code by creating a `launch.json` profile, using breakpoints, step over/into/out (F10/F11/Shift+F11), inspecting variables, and running apps with or without debugging.
+
+- Setup: `Run and Debug` > `create a launch.json file` > `Python Debugger` > `Django` > `manage.py`.
+
+  `launch.json` created in `.vscode`.
+
+- Then, similar to normal Python debugger.
 
 ## Using Django Debug Toolbar
 
-https://django-debug-toolbar.readthedocs.io/en/latest/installation.html
+> Explains installing and configuring **Django Debug Toolbar** (install, add to `INSTALLED_APPS`, middleware, URLs, internal IPs) to analyze requests, settings, headers, and especially SQL queries during development.
 
-Install with:
+Docs: [Installation](https://django-debug-toolbar.readthedocs.io/en/latest/installation.html)
 
-```sh
-pipenv install django-debug-toolbar
-```
+- Install with:
 
-While adding to installed apps and middleware, use `if DEBUG` / `settings/dev.py`.
+  ```sh
+  pipenv install django-debug-toolbar
+  ```
 
-See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares)
+- While adding to installed apps and middleware, use `if DEBUG` / `settings/dev.py`.
+
+  See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares)
+
+### Not showing on some pages?
+
+> "Note that the toolbar only shows up for pages with an HTML body tag"
+> \- [Docs](https://django-debug-toolbar.readthedocs.io/en/latest/installation.html#troubleshooting)
+
+**Solution:**
+
+1. [Not working] Add following in settings:
+
+    ```py
+    DEBUG_TOOLBAR_CONFIG = {"SHOW_TOOLBAR_CALLBACK": lambda _: True}
+    ```
+
+2. [Working] Use [django-debug-toolbar-force](https://github.com/barseghyanartur/django-debug-toolbar-force).
+
+   Installation: `pipenv install`; Add to `MIDDLEWARE`
+
+   Usage: Append `/?debug-toolbar` to the url.
+
+   (Make sure `/` is there. Without that, actual page content was not showing for me.)
+
+Src: [AI Mode](https://share.google/aimode/FRdfuo0VEQWms3GUW)
