--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -1,5 +1,7 @@
 ## Introduction to Data Modeling
 
+> Introduces data modeling in Django by identifying entities (Product, Collection), their attributes, and relationships (one-to-many, optional featured product), as the foundation for an e-commerce project.
+
 Types of relationships:
 
 - One to One (`OneToOneField`)
@@ -8,7 +10,28 @@ Types of relationships:
 
 ## Building an E-commerce Data Model
 
+> Expands the e-commerce data model by adding Cart, CartItem (association class), Customer, Order, OrderItem, and Tag entities, explaining their relationships (one-to-many & many-to-many) and design choices.
+
+<details>
+<summary>Association class?</summary>
+
+A special type of class used in UML/data modeling to represent a **relationship that itself has attributes**.
+
+For example:
+
+- `CartItem` is an association class between `Cart` and `Product`.
+- A cart can contain many products, and a product can appear in many carts.
+- But we also need extra info about this relationship, like **quantity** of the product in the cart.
+- Since the relationship has its own data, we don’t just connect Cart ↔ Product directly; instead, we add `CartItem` to store those attributes.
+
+So, in short:
+An **association class = relationship + its own attributes.**
+
+</details>
+
 ## Organizing Models in Apps
+
+> Covers how to properly break a Django project into apps—avoiding monoliths and over-fragmentation—by grouping related functionality (e.g., store) while keeping optional features (e.g., tags) as separate self-contained apps for high cohesion and low coupling.
 
 - [Monolithic Application](https://en.wikipedia.org/wiki/Monolithic_application): All models live in a single app.  
   **Problem:** Complexity
@@ -25,6 +48,8 @@ Types of relationships:
 - Apps should have **zero or minimal coupling**.
 
 ## Creating Models
+
+> Shows how to define Django model classes (Product & Customer) with fields, types, options, and primary keys, highlighting best practices like using `DecimalField` for money and Django’s automatic ID field.
 
 API Reference for model fields: https://docs.djangoproject.com/en/5.2/ref/models/fields
 
@@ -56,11 +81,11 @@ Django creates a primary key `id` for every model by default unless a field is e
 
 ## Choice Fields
 
+> Explains how to use `choices` in Django model fields with constants for cleaner code, demonstrated through membership levels and an Order model with payment status options.
+
 ## Defining One-to-one Relationships
 
-`models.OneToOneField`
-
-<br>
+> Demonstrates implementing a one-to-one relationship (Customer–Address) using `OneToOneField` with `on_delete` options, and `primary_key=True` to enforce uniqueness.
 
 `on_delete` options: https://docs.djangoproject.com/en/5.2/ref/models/fields/#django.db.models.ForeignKey.on_delete
 
@@ -76,11 +101,11 @@ E.g. Parent: `Customer`, Child: `Address`
 In `Address` model:  
 `customer = models.OneToOneField()`
 
-<br>
-
 ### Auto Reverse Relationships
 
 In Django, when we define a relationship from one model to another, a **reverse relationship** is automatically created on the related (parent) model.
+
+> Important to note that field/column is not added in the DB, by above I mean that we can use the reverse relation with Django ORM code. (It queries the DB to get the result from the parent model table.) Got it?
 
 - For example, Django adds a reverse relation on `Customer` named `address` by default.
 - The reverse relation name is:
@@ -91,12 +116,12 @@ In Django, when we define a relationship from one model to another, a **reverse 
 This allows you to access related objects from the parent model using the reverse name.
 
 > Doubt: We can already get address from customer and vice versa, then why exactly do we need this?
-> 
-> See the requirement in `playground.views.home` > "Selecting Related Objects" section > Exercise (in the end).
+>
+> See the requirement in `playground.views.test_queries` > "Selecting Related Objects" section > Exercise (in the end).
 
 ## Defining a One-to-Many Relationship
 
-`models.ForeignKey`
+> Explains implementing one-to-many relationships using `ForeignKey`, with examples like Collection–Products, Customer–Orders, Order–OrderItems, and Cart–CartItems, along with appropriate `on_delete` behaviors.
 
 Note:  
 If we want to define a foreign relationship, the other class needs to be defined above in order to reference it.  
@@ -105,13 +130,13 @@ But, only do this in case of circular relationship, not when you can just move t
 
 ## Defining Many-to-Many Relationships
 
-`models.ManyToManyField`
+> Covers defining many-to-many relationships using `ManyToManyField` with an example of Products–Promotions, and Django’s automatic reverse relation (`promotion.product_set`).
 
 ### Important: How exactly many to many fields are stored in the DB?
 
 A many-to-many relationship isn't stored in a single database column. It's managed using a third, intermediate junction table (automatically created, named "app_name_modelname_field_name") that contains foreign keys to the two tables being linked. The "field" in your application code is an abstraction that runs `JOIN` queries on this junction table to get the related data.
 
-Read here: https://g.co/gemini/share/db60c19a2a87
+Read here: [Gemini](https://g.co/gemini/share/db60c19a2a87)
 
 #### A Concrete Example: Students & Courses
 
@@ -158,6 +183,8 @@ WHERE E.student_id = 1;
 
 ## Resolving Circular Relationships
 
+> Explains handling circular dependencies in Django models (e.g., Collection–Product) using string references in `ForeignKey`, and resolving reverse relation conflicts with `related_name`.
+
 See `store.models.Collection` class.
 
 To avoid name clash in case of circular dependency:
@@ -180,6 +207,8 @@ https://docs.djangoproject.com/en/5.2/ref/models/fields/#django.db.models.Foreig
 
 ## Generic Relationships
 
+> Explains implementing generic relationships using `ContentType`, `object_id`, and `GenericForeignKey`, demonstrated through reusable tagging and likes apps.
+
 As discussed in the `Organizing Models in Apps`, we have a separate app `tags`.  
 Now, to define the model, we should use a generic `ContentType` model instead of our actual model(s). So that the app is not actually related, and can be used in any other project as is.
 
@@ -192,3 +221,5 @@ content_type = models.ForeignKey(to=ContentType, on_delete=...)
 object_id = models.PositiveIntegerField()
 content_object = GenericForeignKey()
 ```
+
+Read how it works: [Gemini](https://g.co/gemini/share/d7fc1a0b3bb1)
