--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -1,16 +1,20 @@
 ## Supported Database Engines
 
+> Introduces Django-supported databases (SQLite, Postgres, MySQL, MariaDB, Oracle), recommends Postgres/MySQL for serious projects, and sets up switch from SQLite to MySQL for the course.
+
 https://docs.djangoproject.com/en/5.2/ref/databases
 
 Default: SQLite - should only be used for development / personal projects with no traffic.
 
-> SQLite is a serverless db.
+> SQLite is a serverless db. (file-based)
 
-For production, most popular: PostgreSQL, MySQL
+For production, most popular (relational): PostgreSQL, MySQL
 
 > Mosh is using MySQL, but I'd use **Postgres** since it's **more popular** in Django.
 
 ## Creating Migrations
+
+> Explains Django migrations—how `makemigrations` generates migration files for model changes (create, rename, add fields), naming/editing them, handling defaults/nullables, and importance of installed apps.
 
 `makemigrations` - creates app-wise migration files using the current state of models in an app
 
@@ -28,11 +32,17 @@ When a field (i.e., column) is added later in the model, there should be a value
 
 - Option 1: make the field nullable with `null=True`
 - Option 2: add a default `default="something"`
-- Option 3: supply a default value in the terminal (this is not saved in the model but only used for previous records and stored in the current migration file)
+- Option 3: supply a one-off default value in the terminal (this is not saved in the model but only used for previous records, and stored in the current migration file)
 
 Choice depends on our requirements.
 
+<br>
+
+What's a `models.SlugField()` and how exactly does it work? Read: [`Gemini`](https://g.co/gemini/share/faf64a82a49d)
+
 ## Running Migrations
+
+> Covers running migrations with `migrate`, exploring the SQLite database/tables, tracking applied migrations, using `sqlmigrate` to view generated SQL, and naming/usage conventions for SQL/MySQL.
 
 `migrate` - converts the migration files into actual SQL according to the current DB, and runs them to apply the changes in the DB
 
@@ -50,9 +60,11 @@ To see the actual SQL that Django will run:
 sqlmigrate app_name XXXX
 ```
 
-> This depends on the current DB set in settings. (SQLite / PostgreSQL / etc.)
+> This depends on the currently set DB in settings. (SQLite / PostgreSQL / etc.)
 
 ## Customizing Database Schema
+
+> Shows customizing models with `Meta` options (table name, ordering, indexes), creating migrations for these changes, and why sticking to Django’s defaults is usually better.
 
 When we create models, Django uses a fixed convention to name tables and fields.  
 We can customize that using `class Meta`:  
@@ -64,9 +76,11 @@ We can change things like table name (using `db_table`), default ordering of que
 Avoid customizing just to change naming conventions (unless necessary). Django already provides good conventions.
 If we override conventions for one model, we’d need to do it for all models to keep consistency, which is inefficient. It’s better to stick to Django’s defaults.
 
-> Note: When running `makemigrations`, it's generally recommended to make a single, logical set of changes to your models (e.g., adding a new feature, refactoring a specific part of a model) and then run `makemigrations`. If you have two unrelated or independently deployable changes to your models, it is better practice to make the first change, run `makemigrations` to create its dedicated migration file, commit it, and then make the other change, and run `makemigrations` again for its own migration. This approach results in clearer, more manageable, and easier-to-debug migration histories.
+> Note: When running `makemigrations`, it's generally recommended to make a single, logical set of changes to your models (e.g., adding a new feature, refactoring a specific part of a model) and then run `makemigrations`. If you have two unrelated or independently deployable changes to your models, it is better practice to make the first change, run `makemigrations` to create its dedicated migration file, commit it, and then make the other change, and run `makemigrations` again for its own migration. This approach results in clearer, more manageable, and easier-to-debug migration histories. [Exactly like how we do in Git commits, related changes together.]
 
 ## Reverting Migrations
+
+> Explains how to undo/revert migrations—either by downgrading with `migrate`, deleting migration files & code, or more cleanly using Git reset.
 
 As discussed before, migration files are like git commits. Reverting migrations follows a similar concept.
 
@@ -85,22 +99,47 @@ Solution: Either we'd need to delete the migration files and manually revert all
 
 If we want to unapply a migration in the middle of the chain, we must manually undo the model change and create a new migration file.
 
+<details>
+<summary>Read again</summary>
+
+- Migration files are like Git commits; reverting migrations follows a similar concept.
+
+- To undo migrations up to a point:
+
+  ```sh
+  python manage.py migrate app_name XXXX
+  ```
+
+  This unapplies all migrations after `XXXX`.
+
+- However, the code and migration files remain — so Django will reapply those unapplied migrations on the next `migrate`.
+
+- Fix: either delete the migration files + undo model changes manually, or (better) use Git:
+
+  ```sh
+  git reset --hard HEAD~1
+  ```
+
+- To revert a migration in the middle of the chain, you must manually undo the model change and create a new migration that removes it.
+
+</details>
+
 ## Installing ~~MySQL~~ PostgreSQL + Connecting to ~~MySQL~~ PostgreSQL
+
+> Installing ~~MySQL~~ PostgreSQL, setting up root password, and connecting via GUI tool (DataGrip) to create the `storefront` database.
 
 [Interactive installer by EDB](https://www.postgresql.org/download/macosx/#:~:text=Interactive%20installer%20by%20EDB) is poor:
 
 - No convenient way to start/stop the server (requires long command)
 - pgAdmin has a bad UI
 
-<br>
-
 Better:
 
-**Server:**
-[Postgres.app](https://www.postgresql.org/download/macosx/#:~:text=Postgres.app) (Provides easy start/stop)  
-\+  
-**DB Client / DB Admin Tool:**
-[DataGrip](https://www.jetbrains.com/datagrip) (Paid, but free for students)
+- **Server:**
+  [Postgres.app](https://www.postgresql.org/download/macosx/#:~:text=Postgres.app) (Provides easy start/stop)  
+  \+
+- **DB Client / DB Admin Tool:**
+  [DataGrip](https://www.jetbrains.com/datagrip) (Paid, but free for students)
 
 <br>
 
@@ -121,14 +160,12 @@ In DataGrip:
 3. Connect to the local DB server using server details/credentials
 4. Create a new DB
 
-<br>
-
-**DataGrip Alt:**
-
-For small/basic tasks, just use VS Code extension [SQL Tools](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools), which works well!  
+For just reading the data, use VS Code extension [SQL Tools](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools), which works well! (Doesn't support modifying.)  
 Requires: VS Code extension [SQLTools PostgreSQL Driver](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools-driver-pg)
 
 ## Using ~~MySQL~~ PostgreSQL in Django
+
+> Install ~~`mysqlclient`~~ `psycopg`, update `settings.py` to use Postgres (DB name, host, user, password), and run migrations to create Django tables in the Postgres database.
 
 https://docs.djangoproject.com/en/5.2/ref/databases/#postgresql-notes
 
@@ -159,6 +196,8 @@ And then `migrate` to create the tables in our new Postgres DB.
 
 ## Running Custom SQL
 
+> We can create an empty migration and use `migrations.RunSQL` to run custom queries or schema changes directly.
+
 1. Make an empty migration file:
 
    ```sh
@@ -171,9 +210,11 @@ And then `migrate` to create the tables in our new Postgres DB.
    migrations.RunSQL(sql, reverse_sql: Optional)
    ```
 
-   If we don't provide `reverse_sql`, then we won't be able to undo the migration if we needed to using `migrate` cmd.
+   If we don't provide `reverse_sql`, then we won't be able to undo the migration if we needed to using `migrate` cmd. Best practice: Always provide.
 
 ## Generating Dummy Data
+
+> Used Mockaroo to generate and import dummy data (CSV/SQL) into MySQL tables for testing.
 
 [mockaroo.com](https://www.mockaroo.com)
 
