--- a/Notes/Part 3/7. Preparing for Production.md
+++ b/Notes/Part 3/7. Preparing for Production.md
@@ -336,9 +336,14 @@ MIDDLEWARE = [
 
 > "You should include the Debug Toolbar middleware as early as possible in the list. However, it must come after any other middleware that encodes the response’s content, such as `GZipMiddleware`." - [Docs](https://django-debug-toolbar.readthedocs.io/en/latest/installation.html#add-the-middleware)
 
+And `ForceDebugToolbar`:
+
+- After `DebugToolbar` - [GitHub](https://github.com/barseghyanartur/django-debug-toolbar-force/?tab=readme-ov-file#installation)
+
 ```py
 MIDDLEWARE = [
     "debug_toolbar.middleware.DebugToolbarMiddleware",
+    "debug_toolbar_force.middleware.ForceDebugToolbarMiddleware",
     "corsheaders.middleware.CorsMiddleware",
     "django.middleware.security.SecurityMiddleware",
     "whitenoise.middleware.WhiteNoiseMiddleware",
